# resilient_imu

./: CMakeLists.txt  IMUClass.cpp  IMUClass.h  IMU_analysis.py  Matrix.h  README.md  Vector.h  analysis.py  data_structures.h  imu.cpp  imu.h  kalman.cpp  kalman.h  madgwick.cpp  madgwick.h  main.cpp
config/: configuration.h
data/: imu_data.txt  madgwick_log.txt
filters/: IMUFilter.h  KalmanFilter2D.cpp  KalmanFilter2D.h  MadgwickFilter.cpp  MadgwickFilter.h  RawFilter.cpp  RawFilter.h  kalman.h  madgwick.cpp  madgwick.h
linear_algebra/: LinearAlgebra.h  linear_algebra.h
